Correct capitalisation on Page Title

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Crazy stuff I Type at night
+title: Crazy Stuff I Type at Night
 
 # Your name to show in the footer
 author: Stephen Schwetz
