--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author: Stephen Schwetz
 
 navbar-links:
   Projects: 
-    - "Neurodiversity in Australia", "https://neurodiversity-in.au"
+    - Neurodiversity in Australia, "https://neurodiversity-in.au"
   About Me: "aboutme"
 #  Resources:
 #    -
