--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,9 @@ author: Stephen Schwetz
 ###############################################
 
 navbar-links:
-  Projects: 
-    - Neurodiversity in Australia, "https://neurodiversity-in.au"
   About Me: "aboutme"
-#  Resources:
-#    -
+  Resources:
+    - Neurodiversity in Australia, "https://neurodiversity-in.au"
 #    - Beautiful Jekyll: "https://beautifuljekyll.com"
 #    - Learn markdown: "https://www.markdowntutorial.com/"
   
