--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,10 @@ author: Stephen Schwetz
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  Weather: "weather"
+  About: 
+    - Us: "schwarrisons"
+    - Stephen: "aboutme"
   Projects:
     - Neurodiversity in Australia: "https://neurodiversity-in.au"
 #    - Beautiful Jekyll: "https://beautifuljekyll.com"
@@ -113,7 +116,7 @@ feed_show_tags: true
 post_search: true
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
-edit_page_button: true
+edit_page_button: false
 
 # Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
 # If this setting is off, then long sub-menu words might get cut off
@@ -170,7 +173,7 @@ footer-hover-col: "#0085A1"
 #cloudflare_analytics: ""
 
 # Google Tag Manager ID
-#gtm: ""
+gtm: "G-SLV0L9BQDX"
 
 # Matomo (aka Piwik) Web statistics
 # Uncomment the following section to enable Matomo. The opt-out parameter controls
@@ -190,7 +193,7 @@ footer-hover-col: "#0085A1"
 ####################
 
 # To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
-#disqus: ""
+disqus: "schwetz"
 
 # To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
 #fb_comment_id: ""
