Add Ellie the Stupid

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ navbar-links:
     - Stephen: "aboutme"
   Projects:
     - Neurodiversity in Australia: "https://neurodiversity-in.au"
+  "Ellie the Stupid": "ellie"
 #    - Beautiful Jekyll: "https://beautifuljekyll.com"
 #    - Learn markdown: "https://www.markdowntutorial.com/"
   
