--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ port: 4000
 LSI: true
 theme: beautiful-jekyll-theme
 
+categories: 
+  - Knowledge-Base
 
 ############################
 # --- Required options --- #
