--- a/_config.yml
+++ b/_config.yml
@@ -316,8 +316,11 @@ plugins:
   - "cheesy-gallery"
 
  collections:
-   galleries:
-     cheesy-gallery: true
- #:    output: true
+  gallery:
+    cheesy-gallery: true
+    # output: false # works to suppress output, but defaults to `true` when marked as a cheesy-gallery
+    gallery_thumbnail_size: 150
+    image_thumbnail_size: 150
+    quality: 70
   
 
