--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ categories:
 ############################
 
 # Name of website
-title: "Enqueue The Madness"
+title: "∞ Autistic Pride ∞"
 
 # Your name to show in the footer
 author: Stephen Schwetz
