setup for authors pages

--- a/_config.yml
+++ b/_config.yml
@@ -294,6 +294,14 @@ defaults:
       path: "" # any file that's not a post will be a "page" layout by default
     values:
       layout: "page"
+   
+  - scope:
+      path: ""
+      type: authors
+    values:
+      layout: author
+      permalink: /authors/:slug
+
 
 # Exclude these files from production site
 exclude:
@@ -319,7 +327,7 @@ plugins:
   - "classifier-reborn"
 
 collections:
-  fotos:
-    cheesy-gallery: true
-  
+  authors:
+    output: true
+
 
