--- a/_config.yml
+++ b/_config.yml
@@ -302,6 +302,13 @@ defaults:
       layout: author
       permalink: /authors/:slug
 
+  - scope:
+      path: ""
+      type: galleries
+    values:
+      layout: gallery
+      permalink: /galleries/:slug
+
 
 # Exclude these files from production site
 exclude:
@@ -330,5 +337,8 @@ plugins:
 collections:
   authors:
     output: true
+  galleries:
+    ellie-gallery:
+      output: true
 
 
