--- a/_config.yml
+++ b/_config.yml
@@ -5,15 +5,11 @@
 ### the initial set up you won't need to come back to this file often.
 ###########################################################
 
+remove-ads: true
 url: "https://schwetz.au"
-#baseurl: "/"
-host: 10.69.6.3
-port: 4000
+baseurl: 
 LSI: true
 remote_theme: sschwetz/beautiful-jekyll
-#remote_theme: daattali/beautiful-jekyll
-categories: 
-  - Knowledge-Base
 
 ############################
 # --- Required options --- #
