--- a/_config.yml
+++ b/_config.yml
@@ -321,6 +321,7 @@ plugins:
   - "jekyll-postfiles"
   - "classifier-reborn"
   - "jekyll-remote-theme"
+  - "jekyll-minifier"
 
 collections:
   authors:
