--- a/_config.yml
+++ b/_config.yml
@@ -302,6 +302,14 @@ defaults:
       layout: author
       permalink: /authors/:slug
 
+  - scope:
+      path: "/kb"
+      type: 
+    values:
+      layout: author
+      permalink: /kb/:page:output_ext
+
+
 
 # Exclude these files from production site
 exclude:
