--- a/_config.yml
+++ b/_config.yml
@@ -269,7 +269,7 @@ date_format: "%-d %B, %Y"
 timezone: "Australia/Sydney"
 markdown: kramdown
 highlighter: coderay  
-permalink: /:year-:month-:day-:title/
+permalink: /:title
 paginate: 10
 
 #kramdown:
@@ -289,18 +289,12 @@ defaults:
       layout: "post"
       comments: true  # add comments to all blog posts
       social-share: true # add social media sharing buttons to all blog posts
+      permalink: /:year-:month-:day-:title/
   -
     scope:
       path: "" # any file that's not a post will be a "page" layout by default
     values:
       layout: "page"
-  - 
-    scope:
-      path: "/kb"
-      type: page
-    values:
-      layout: page
-      permalink: /kb/:page:output_ext
   - 
     scope:
       path: ""
