--- a/_config.yml
+++ b/_config.yml
@@ -30,12 +30,12 @@ navbar-links:
   Tools:
     - "IT KB": kb/
   About: 
-    - Us: "/about-us"
+    - Us: "about-us"
     - Stephen: "about-stephen"
     - Lilian: "about-lilian"
   Projects:
     - Neurodiversity in Australia: "https://neurodiversity-in.au"
-  "Ellie the Stupid": "ellie"
+  "Galleries": "galleries"
 #    - Beautiful Jekyll: "https://beautifuljekyll.com"
 #    - Learn markdown: "https://www.markdowntutorial.com/"
   
