update mastodon url

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ social-network-links:
 #  yelp: yourname
 #  telegram: yourname
 #  calendly: yourname
-  mastodon: "@stephen@neurodiversity-in.au"
+  mastodon: "https://neurodiversity-in.au/@stephen"
 #  ORCID: your ORCID ID
 #  google-scholar: your google scholar
 #  discord: "invite_code" or "users/userid" or "invite/invite_code" 
