--- a/_config.yml
+++ b/_config.yml
@@ -274,8 +274,19 @@ permalink: "/:year-:month-:day-:title/"
 paginate: 10
 
 commonmark:
-  options: ["UNSAFE", "SMART", "FOOTNOTES"]
-  extensions: ["strikethrough", "autolink", "table", "tagfilter"]
+  options: 
+    - UNSAFE" 
+    - "SMART" 
+    - "FOOTNOTES"
+  extensions: 
+    - "strikethrough" 
+    - "autolink"  
+    - "table" 
+    - "tagfilter"
+    - "superscript"
+    - "subscript"
+    - "emoji"
+
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
@@ -335,7 +346,7 @@ plugins:
   - "jekyll-postfiles"
   - "classifier-reborn"
   - "jekyll-remote-theme"
-  - "jemoji"
+ #:wq - "jemoji"
   - 'jekyll-commonmark-ghpages'
 
 collections:
