--- a/_config.yml
+++ b/_config.yml
@@ -274,6 +274,7 @@ permalink: "/:year-:month-:day-:title/"
 
 commonmark:
   options: 
+    - "UNSAFE"
     - "SMART" 
     - "FOOTNOTES"
   extensions: 
