--- a/_config.yml
+++ b/_config.yml
@@ -165,9 +165,12 @@ footer-hover-col: "#0085A1"
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
 
-# For any extra visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
+# For any  visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
 site-css:
   - "/assets/css/skin-switch.css"
+  
+navbar-extra:
+  - /assets/navbar/light-dark.html
 
 # If you have common JavaScript files that should be included in every page, list them here
 #site-js:
