add darkmode script

--- a/_config.yml
+++ b/_config.yml
@@ -173,8 +173,8 @@ navbar-extra:
   - "light-dark.html"
 
 # If you have common JavaScript files that should be included in every page, list them here
-#site-js:
-#  - "/assets/js/custom-script.js"
+site-js:
+  - "/assets/js/darkmode.js"
 
 #################################
 # --- Web Analytics Section --- #
