--- a/_config.yml
+++ b/_config.yml
@@ -284,7 +284,7 @@ commonmark:
     - "strikethrough" 
     - "autolink"  
     - "table" 
-    - "tagfilter"
+ #   - "tagfilter"
     - "tasklist"
   syntax_highlighter_opts:
     block:
