--- a/_config.yml
+++ b/_config.yml
@@ -331,7 +331,7 @@ defaults:
       layout: "post"
       comments: "true"
       social-share: "true"
-      permalink: ":title:output_ext"
+      permalink: ":title"
   -
     scope:
       path: "/journal/stephen/"
@@ -340,16 +340,16 @@ defaults:
       layout: "post"
       comments: "true"
       social-share: "true"
-      permalink: ":title:output_ext"
+      permalink: ":title"
   -
     scope:
-      path: "/journal/lilian"
+      path: "/journal/lilian/"
       type: ""
     values:
       layout: "post"
       comments: "false"
       social-share: "false"
-      permalink: ":title:output_ext"
+      permalink: ":title"
   -
     scope:
       path: ""
@@ -358,7 +358,7 @@ defaults:
       layout: "post"
       comments: true  # add comments to all blog posts
       social-share: true # add social media sharing buttons to all blog posts
-      permalink: "/:year/:month/:day/:title:output_ext"
+      permalink: "/:year/:month/:day/:title"
   -
     scope:
       path: "" # any file that's not a post will be a "page" layout by default
