--- a/_config.yml
+++ b/_config.yml
@@ -307,7 +307,7 @@ pagination:
   debug: false
   collection: 'posts'
   per_page: 10
-  permalink: '/page/:num' # Pages are index.html inside this folder (default)
+  permalink: '/page/:num/' # Pages are index.html inside this folder (default)
   title: ':title'
   limit: 0
   sort_field: 'date'
@@ -406,7 +406,7 @@ plugins:
 collections:
   authors:
     output: true
-  neurodiversity:
+  neurodiversity-in.au:
     faq:
 
 
