add plugin that is missing from config

--- a/_config.yml
+++ b/_config.yml
@@ -402,6 +402,7 @@ plugins:
   - "jekyll-remote-theme"
   - "jemoji"
   - 'jekyll-commonmark-ghpages'
+  - 'jekyll-gallery-generator'
 
 collections:
   authors:
