--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ remote_theme: "sschwetz/beautiful-jekyll"
 ############################
 
 # Name of website
-title: "Autistic Pride"
+title: "Herping the Derp"
 
 # Your name to show in the footer
 author: "Stephen Schwetz"
